Fixed bug elements overlapping on small screens

--- a/Fullstack/frontend/src/styles/Pages/Repos/SubPages/RepoPage.module.css
+++ b/Fullstack/frontend/src/styles/Pages/Repos/SubPages/RepoPage.module.css
@@ -25,6 +25,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .clone {
